syntax = "proto3";
package cis.types;
option csharp_namespace = "CIS.Infrastructure.gRPC.CisTypes";

// Jednoznacna identifikace klienta s ohledem na ruzne mandanty.
message Identity {
	// Id klienta - bud ID_PARTNER nebo KBID
	int64 identityId = 1;

	enum IdentitySchemes {
		Unknown = 0;
		Mp = 1;
		Kb = 2;
	}

	// KB nebo MP nebo v budoucnu neco jineho
	IdentitySchemes identityScheme = 2;
}